crates/hir-def/tests/snapshots/body_form_snapshots__diamond_new.snap
---
source: crates/hir-def/tests/body_form_snapshots.rs
expression: out
---
SOURCE:

class Foo<T> {
    void m() {
        new Foo<>();
    }
}

PARSE_ERRORS:
<none>
ITEM_TREE:
file (java)
class Foo<T> @1..59
  method m() -> void @20..57

BODIES:
body:
  s0: expr e0: new Foo<>()
