crates/hir-def/tests/snapshots/body_form_snapshots__local_and_anonymous_types.snap
---
source: crates/hir-def/tests/body_form_snapshots.rs
expression: out
---
SOURCE:

class Foo {
    void m() {
        class Local {}
        record Pair(int a, int b) {}
        new Runnable() {
            public void run() {}
        };
    }
}

PARSE_ERRORS:
<none>
ITEM_TREE:
file (java)
class Foo @1..164
  method m() -> void @17..162
    class Local @36..50
    record Pair(int a, int b) @59..87

BODIES:
body:
  s0: local-class Local
  s1: local-class Pair
  s2: expr e0: new Runnable() { run(0) }
